--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".HelperClasses.Activities.Conversations"
+            android:name=".HelperClasses.Activities.Conversations_Activity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,7 +19,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".HelperClasses.Activities.Messages"
+            android:name=".HelperClasses.Activities.Messages_Activity"
             android:label="@string/title_activity_messages" >
         </activity>
     </application>
