--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".HelperClasses.Activities.Conversations_Activity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:windowSoftInputMode="stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,7 +21,8 @@
         </activity>
         <activity
             android:name=".HelperClasses.Activities.Messages_Activity"
-            android:label="@string/title_activity_messages" >
+            android:label="@string/title_activity_messages"
+            android:windowSoftInputMode="stateHidden">
         </activity>
     </application>
 
